# dcc

./: .gitattributes  .gitignore  CMakeLists.txt  Readme.md  base_regression.sh  covproc.sh  full_regression.sh  regression_tester.rb  test_use_all.sh  test_use_base.sh  valgrind_base.sh  valgrind_tester
CMakeScripts/: DCC_Macros.cmake  FindGMock.cmake
common/: CMakeLists.txt  PatternCollector.h  perfhlib.cpp  perfhlib.h
include/: BasicBlock.h  BinaryImage.h  CallConvention.h  CallGraph.h  DccFrontend.h  Enums.h  IdentType.h  Procedure.h  StackFrame.h  ast.h  boost_fwd.h  bundle.h  dcc.h  dcc_interface.h  disassem.h  dosdcc.h  error.h  graph.h  hlicode.h  icode.h  idiom.h  idiom1.h  loader.h  locident.h  machine_x86.h  msvc_fixes.h  perfhlib.h  project.h  scanner.h  state.h  symtab.h  types.h
include/idioms/: arith_idioms.h  call_idioms.h  epilogue_idioms.h  idiom.h  idiom1.h  mov_idioms.h  neg_idioms.h  shift_idioms.h  xor_idioms.h
sigs/: DCCB2C.SIG  DCCB2L.SIG  DCCM5L.SIG  DCCM5S.SIG  DCCM8S.SIG  DCCT4P.SIG  DCCT5P.SIG  dccb3l.sig  dccb3m.sig  dccb3s.SIG  dccm8l.sig  dccm8m.sig  dcct3p.sig
src/: Address.h  AutomatedPlanner.cpp  AutomatedPlanner.h  BasicBlock.cpp  CMakeLists.txt  CallConvention.cpp  Command.cpp  Command.h  DccFrontend.cpp  FollowControlFlow.cpp  FollowControlFlow.h  Loaders.cpp  Loaders.h  MemoryChunk.cpp  MemoryChunk.h  MemorySegment.cpp  MemorySegment.h  MemorySegmentCoordinator.cpp  MemorySegmentCoordinator.h  Procedure.cpp  RegisterNode.cpp  ast.cpp  backend.cpp  bundle.cpp  chklib.cpp  chklib.h  comwrite.cpp  control.cpp  dataflow.cpp  dcc.cpp  dcc_interface.cpp  disassem.cpp  epilogue_idioms.cpp  error.cpp  fixwild.cpp  frontend.cpp  graph.cpp  hlicode.cpp  hltype.cpp  icode.cpp  (+15 more)
src/idioms/: arith_idioms.cpp  call_idioms.cpp  epilogue_idioms.cpp  idiom.cpp  idiom1.cpp  mov_idioms.cpp  neg_idioms.cpp  shift_idioms.cpp  xor_idioms.cpp
src/tests/: CMakeLists.txt  LoaderTests.cpp  LoaderTests.h  MemoryChunkTests.cpp  MemoryChunkTests.h  MemorySegmentCoordinatorTests.cpp  MemorySegmentCoordinatorTests.h  ProjectTests.cpp  ProjectTests.h  comwrite.cpp  loader.cpp  project.cpp
src/ui/: CommandQueueView.cpp  CommandQueueView.h  CommandQueueView.ui  DccMainWindow.cpp  DccMainWindow.h  DccMainWindow.ui  FunctionListDockWidget.cpp  FunctionListDockWidget.h  FunctionListDockWidget.ui  FunctionViewWidget.cpp  FunctionViewWidget.h  FunctionViewWidget.ui  RenderTags.cpp  RenderTags.h  StructuredTextTarget.h
tests/initial_base/: BENCHFN.C  BENCHFN.b  BENCHLNG.C  BENCHLNG.b  BENCHMUL.C  BENCHMUL.b  BENCHMUS.b  BENCHSHO.C  BENCHSHO.b  BYTEOPS.C  BYTEOPS.b  DHAMP.C  DHAMP.b  FIBO.C  FIBOL.b  FIBOS.b  INTOPS.C  INTOPS.b  LONGOPS.C  LONGOPS.b  MATRIXMU.C  MATRIXMU.b  MAX.C  MAX.b  STRLEN.C  STRLEN.b  TESTLONG.C  TESTLONG.b
tests/inputs/: ZORK2.COM
tests/outputs/: BENCHFN.EXE.a1  BENCHFN.EXE.a2  BENCHFN.b  BENCHLNG.EXE.a2  BENCHLNG.b  BENCHMUL.b  BENCHMUS.EXE.a2  BENCHMUS.b  BENCHSHO.b  BYTEOPS.EXE.a1  FIBOS.EXE.a1  FIBOS.EXE.a2  MIN.EXE.a2  MIN.b
tests/prev/: BENCHLNG.EXE.a1  BENCHLNG.EXE.a2  BENCHLNG.b  BENCHMUL.EXE.a1  BENCHMUL.EXE.a2  BENCHMUS.EXE.a1  BENCHMUS.EXE.a2  BENCHSHO.EXE.a1  BENCHSHO.EXE.a2  BYTEOPS.EXE.a2  BYTEOPS.b  FIBOS.b  MIN.EXE.a1  MIN.EXE.a2  MIN.b
tests/prev_base/: BENCHFN.EXE.a1  BENCHFN.b  BENCHLNG.EXE.a1  BENCHLNG.b  BENCHMUL.EXE.a1  BENCHMUL.EXE.a2  BENCHMUL.b  BENCHMUS.EXE.a1  BENCHMUS.b  BENCHSHO.EXE.a1  BENCHSHO.EXE.a2  BENCHSHO.b  BYTEOPS.EXE.a1  BYTEOPS.EXE.a2  DHAMP.EXE.a1  DHAMP.EXE.a2  DHAMP.b  FIBOL.EXE.a1  FIBOL.EXE.a2  FIBOL.b  FIBOS.EXE.a1  FIBOS.b  INTERCEP.EXE.a1  INTERCEP.EXE.a2  INTOPS.EXE.a1  INTOPS.EXE.a2  INTOPS.b  LONGOPS.EXE.a1  LONGOPS.EXE.a2  LONGOPS.b  MATRIXMU.EXE.a1  MATRIXMU.EXE.a2  MATRIXMU.b  MAX.EXE.a1  MAX.EXE.a2  MAX.b  MIN.b  STRLEN.EXE.a1  STRLEN.EXE.a2  STRLEN.b  (+2 more)
tools/: CMakeLists.txt
tools/dispsrch/: CMakeLists.txt  dispsig.cpp  dispsig.mak  dispsrch.txt  srchsig.cpp  srchsig.mak
tools/makedsig/: CMakeLists.txt  LIB_PatternCollector.cpp  LIB_PatternCollector.h  TPL_PatternCollector.cpp  TPL_PatternCollector.h  fixwild.cpp  makedsig.cpp
tools/parsehdr/: CMakeLists.txt  locident.h  parsehdr.cpp  parsehdr.h  parsehdr.txt  parselib.mak  tcfiles.lst
tools/readsig/: CMakeLists.txt  readsig.cpp  readsig.mak  readsig.txt
tools/regression_tester/: CMakeLists.txt  regression_tester.cpp
